fix z-index modal loading

--- a/src/css/_spin.scss
+++ b/src/css/_spin.scss
@@ -2,8 +2,11 @@
     .ant-spin {
         &.ant-spin-custom{
             background-color: #0e0a05c7;
-            z-index: 1001;
-            max-height: 100vh;
+            z-index: 10001;
+            max-height: 100%;
+            .ant-spin-dot {
+                top: 25%;
+            }
         }
     }
 }
